--- a/package.json
+++ b/package.json
@@ -4,12 +4,49 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "app-root-dir": "^1.0.2",
     "body-parser": "^1.17.2",
-    "chalk": "^2.0.1",
+    "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "morgan": "^1.8.2"
+  },
+  "devDependencies": {
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "cache-loader": "^1.0.3",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "latest": "^0.2.0",
+    "ngrok": "^2.2.13",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.5",
+    "postcss-mixins": "^6.0.0",
+    "precss": "^1.4.0",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "webpack": "^2.6.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
+  },
+  "scripts": {
+    "dev:build": "rimraf build && cross-env NODE_ENV=development webpack --config webpack/webpack.config.js",
+    "prod:build": "rimraf build && cross-env NODE_ENV=production webpack --config webpack/webpack.config.js",
+    "tunnel:build": "rimraf build && cross-env NODE_ENV=production ENABLE_TUNNEL=true webpack --config webpack/webpack.config.js",
+    "dev:start": "cross-env NODE_ENV=development babel-node app.js",
+    "prod:start": "cross-env NODE_ENV=production babel-node app.js",
+    "tunnel:start": "cross-env NODE_NEV=production ENABLE_TUNNEL=true babel-node app.js"
   }
 }
