Updates scripts to be shorter and removes unused scripts, revises readme.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "charharhar-express-no-react",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "dependencies": {
     "app-root-dir": "^1.0.2",
@@ -42,11 +42,10 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
-    "dev:build": "rimraf build && cross-env NODE_ENV=development webpack --config webpack/webpack.config.js",
-    "prod:build": "rimraf build && cross-env NODE_ENV=production webpack --config webpack/webpack.config.js",
+    "develop": "cross-env NODE_ENV=development babel-node app.js",
+    "build": "rimraf build && cross-env NODE_ENV=production webpack --config webpack/webpack.config.js",
+    "start": "cross-env NODE_ENV=production babel-node app.js",
     "tunnel:build": "rimraf build && cross-env NODE_ENV=production ENABLE_TUNNEL=true webpack --config webpack/webpack.config.js",
-    "dev:start": "cross-env NODE_ENV=development babel-node app.js",
-    "prod:start": "cross-env NODE_ENV=production babel-node app.js",
     "tunnel:start": "cross-env NODE_NEV=production ENABLE_TUNNEL=true babel-node app.js"
   }
 }
