--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "license": "MIT",
+  "engines:": {
+    "node": "7.10.0"
+  },
   "dependencies": {
     "app-root-dir": "^1.0.2",
     "body-parser": "^1.17.2",
